# ai-udemy-training

./: pyproject.toml
regression/simple_linear/: simple_linear.ipynb
